--- a/playbooks/roles/setup_tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-debian.yaml
@@ -7,14 +7,24 @@
 - name: Configure repository "torproject"
   ansible.builtin.apt_repository:
     filename: "torproject"
-    repo: "deb https://deb.torproject.org/torproject.org {{ ansible_facts.distribution_release }} main"
+    repo: "deb https://deb.torproject.org/torproject.org {{ item }} main"
     state: present
+  with_items:
+    - "{{ ansible_facts.distribution_release }}"
+    - "{{ tor_debian_suite }}"
+
+- name: Install or update Debian key ring
+  when: not ansible_check_mode
+  ansible.builtin.apt:
+    default_release: "{{ ansible_facts.distribution_release }}"
+    name:
+      - deb.torproject.org-keyring
 
 - name: Install or update Tor
   when: not ansible_check_mode
   ansible.builtin.apt:
+    default_release: "{{ tor_debian_suite }}"
     name:
-      - deb.torproject.org-keyring
       - obfs4proxy
       - tor
       - tor-geoipdb
