--- a/playbooks/roles/setup/defaults/main.yaml
+++ b/playbooks/roles/setup/defaults/main.yaml
@@ -3,7 +3,7 @@ additional_ports: []
 additional_software: []
 
 # for other kernels than provided by "stable"
-kernel_debian_repo: "" # "experimental"
+kernel_debian_target: "" # e.g. "experimental"
 kernel_debian_version: ""
 
 kernel_git_version: "" # e.g. "HEAD" or "v6.7.3"
