--- a/playbooks/roles/setup/tasks/firewall.yaml
+++ b/playbooks/roles/setup/tasks/firewall.yaml
@@ -17,7 +17,7 @@
 
 - name: Save iptables state
   community.general.iptables_state:
-    ip_version: "{{ 'ip' + item }}"
+    ip_version: "ip{{ item }}"
     state: saved
     path: "{{ '/etc/iptables/rules.' + item }}"
   with_items:
