--- a/playbooks/roles/setup_tor/tasks/firewall.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall.yaml
@@ -15,7 +15,7 @@
 
 - name: ACCEPT TCP to obfs4 port
   ansible.builtin.iptables:
-    ip_version: "{{ 'ip' + item }}"
+    ip_version: "ip{{ item }}"
     chain: INPUT
     table: filter
     protocol: tcp
@@ -53,7 +53,7 @@
 
 - name: Save iptables state
   community.general.iptables_state:
-    ip_version: "{{ 'ip' + item }}"
+    ip_version: "ip{{ item }}"
     state: saved
     path: "{{ '/etc/iptables/rules.' + item }}"
   with_items:
