--- a/playbooks/roles/setup/defaults/main.yaml
+++ b/playbooks/roles/setup/defaults/main.yaml
@@ -14,4 +14,5 @@ metrics_port: ""
 prometheus_node_exporter: ""
 prometheus_server: ""
 
+# certificates and more
 ssl_dir: "{{ playbook_dir }}/../secrets/ssl"
