grouped tools logic together

--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -44,7 +44,7 @@
       when: tor_build_from_source
       block:
         - name: Tools
-          ansible.builtin.import_tasks: tools.yaml
+          ansible.builtin.import_tasks: tools-git.yaml
           tags:
             - tools
 
