--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -19,11 +19,13 @@
 - name: Log system
   ansible.builtin.import_tasks: log-system.yaml
   tags:
+    - log
     - log-system
 
 - name: Log unattended
   ansible.builtin.import_tasks: log-unattended.yaml
   tags:
+    - log
     - log-unattended
 
 - name: Metrics port
