--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -99,6 +99,10 @@
         - kernel
 
 - name: Check if reboot is required
+  changed_when: _reboot_required.stat.exists
   ansible.builtin.stat:
     path: /var/run/reboot-required
+  register: _reboot_required
+  tags:
+    - reboot
   notify: "reboot required"
