--- a/ansible.cfg
+++ b/ansible.cfg
@@ -14,7 +14,7 @@ inject_facts_as_vars = false
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
 
-# reduce spam
+# reduce noise
 display_skipped_hosts = false
 
 # would clash with search pattern of grep
@@ -22,5 +22,5 @@ no_target_syslog = True
 
 remote_user = root
 
-# compression is discouraged
+# compression is discouraged from security perspective
 ssh_args = -o Compression=no -o StrictHostKeyChecking=on
