async long-running tasks

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,11 +1,10 @@
 [defaults]
 interpreter_python = /usr/bin/python3
 
-# 2 per CPU
+# 2 per vCPU
 forks = 32
-order = sorted
 pipelining = True
-# no half-baked system states
+# no half-baked system state
 strategy = free
 
 gathering = implicit
