--- a/playbooks/roles/setup/tasks/kernel-git.yaml
+++ b/playbooks/roles/setup/tasks/kernel-git.yaml
@@ -1,6 +1,13 @@
 ---
+- name: Check if repo of Linux is already there
+  ansible.builtin.stat:
+    path: /root/linux
+  register: _repo_linux_is_cloned
+
 - name: Install or update toolchain for kernel build
   when: not ansible_check_mode
+  async: "{{ _repo_linux_is_cloned.stat.exists | ternary(0,1800) }}"
+  poll: "{{ _repo_linux_is_cloned.stat.exists | ternary(15,60) }}"
   ansible.builtin.apt:
     name:
       - bc
@@ -15,62 +22,63 @@
       - libncurses5-dev
       - libssl-dev
 
-- name: Init or update (bare) repo of Linux
+- name: Init or update repo of Linux
   when: not ansible_check_mode
+  async: "{{ _repo_linux_is_cloned.stat.exists | ternary(0,1800) }}"
+  poll: "{{ _repo_linux_is_cloned.stat.exists | ternary(15,60) }}"
+  retries: 2
   ansible.builtin.git:
     repo: https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git
     dest: /root/linux
-    bare: true
+    version: "{{ kernel_git_version }}"
+    force: true
   register: _repo_linux
 
-- name: "Create or update /usr/src/linux-{{ kernel_git_version }}/"
-  when: _repo_linux.changed
-  ansible.builtin.shell:
-    cmd: |
-      git archive "{{ kernel_git_version }}" --prefix linux-"{{ kernel_git_version }}/" |
-        (cd /usr/src/; sudo tar -xf-)
-    chdir: /root/linux
-
-- name: Apply patches
+- name: Apply patches for Linux
   ansible.builtin.shell:
     cmd: curl -s {{ item }} | patch -p 1
-    chdir: "/usr/src/linux-{{ kernel_git_version }}"
+    chdir: /root/linux
   loop_control:
     label: "{{ item }}"
   loop: "{{ kernel_git_patches }}"
   register: _kernel_patched
 
-- name: "Build Linux {{ kernel_git_version }}"
+- name: Build Linux
   when: _repo_linux.changed or _kernel_patched.changed
+  async: 3600
+  poll: 60
   ansible.builtin.shell:
     cmd: |
       set -euf
 
-      yes '' | make localmodconfig
-      sed -i \
-        -e 's,^# CONFIG_IKCONFIG_PROC .*,CONFIG_IKCONFIG_PROC=y,' \
-        -e 's,^# CONFIG_IP_NF_FILTER.*,CONFIG_IP_NF_FILTER=m,' \
-        -e 's,^# CONFIG_IP_NF_NAT.*,CONFIG_IP_NF_NAT=m,' \
-        -e 's,^# CONFIG_IP_SET_HASH .*,CONFIG_IP_SET_HASH=m,' \
-        -e 's,^# CONFIG_IP_SET_HASH_IP .*,CONFIG_IP_SET_HASH_IP=m,' \
-        -e 's,^# CONFIG_IP6_NF_FILTER.*,CONFIG_IP6_NF_FILTER=m,' \
-        -e 's,^# CONFIG_IP6_NF_IPTABLES .*,CONFIG_IP6_NF_IPTABLES=m,' \
-        -e 's,^# CONFIG_IP6_NF_NAT .*,CONFIG_IP6_NF_NAT=m,' \
-        -e 's,^# CONFIG_IP6_NF_RAW .*,CONFIG_IP6_NF_RAW=m,' \
-        -e 's,^# CONFIG_LOCALVERSION_AUTO .*,CONFIG_LOCALVERSION_AUTO=y,' \
-        -e 's,^# CONFIG_NETFILTER_XT_MATCH_HASHLIMIT .*,CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=m,' \
-        -e 's,^# CONFIG_NETFILTER_XT_MATCH_MULTIPORT.*,CONFIG_NETFILTER_XT_MATCH_MULTIPORT=m,' \
-        -e 's,^# CONFIG_NETFILTER_XT_NAT .*,CONFIG_NETFILTER_XT_NAT=m,' \
-        -e 's,^# CONFIG_NF_NAT .*,CONFIG_NF_NAT=m,' \
-        -e 's,^# CONFIG_NFT_NAT .*,CONFIG_NFT_NAT=m,' \
-        .config
-      yes '' | make oldconfig
+      if [[ ! -s .config ]]; then
+        yes '' | make localmodconfig
+        sed -i \
+          -e 's,^# CONFIG_IKCONFIG_PROC .*,CONFIG_IKCONFIG_PROC=y,' \
+          -e 's,^# CONFIG_IP_NF_FILTER.*,CONFIG_IP_NF_FILTER=m,' \
+          -e 's,^# CONFIG_IP_NF_NAT.*,CONFIG_IP_NF_NAT=m,' \
+          -e 's,^# CONFIG_IP_SET_HASH .*,CONFIG_IP_SET_HASH=m,' \
+          -e 's,^# CONFIG_IP_SET_HASH_IP .*,CONFIG_IP_SET_HASH_IP=m,' \
+          -e 's,^# CONFIG_IP6_NF_FILTER.*,CONFIG_IP6_NF_FILTER=m,' \
+          -e 's,^# CONFIG_IP6_NF_IPTABLES .*,CONFIG_IP6_NF_IPTABLES=m,' \
+          -e 's,^# CONFIG_IP6_NF_NAT .*,CONFIG_IP6_NF_NAT=m,' \
+          -e 's,^# CONFIG_IP6_NF_RAW .*,CONFIG_IP6_NF_RAW=m,' \
+          -e 's,^# CONFIG_LOCALVERSION_AUTO .*,CONFIG_LOCALVERSION_AUTO=y,' \
+          -e 's,^# CONFIG_NETFILTER_XT_MATCH_HASHLIMIT .*,CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=m,' \
+          -e 's,^# CONFIG_NETFILTER_XT_MATCH_MULTIPORT.*,CONFIG_NETFILTER_XT_MATCH_MULTIPORT=m,' \
+          -e 's,^# CONFIG_NETFILTER_XT_NAT .*,CONFIG_NETFILTER_XT_NAT=m,' \
+          -e 's,^# CONFIG_NF_NAT .*,CONFIG_NF_NAT=m,' \
+          -e 's,^# CONFIG_NFT_NAT .*,CONFIG_NFT_NAT=m,' \
+          .config
+        yes '' | make oldconfig
+      fi
 
       make -j {{ 1 + (ansible_facts.memtotal_mb / 2048) | int }}
+      ln -snf $PWD /usr/src/linux
       make install
       make modules_install
       update-initramfs -u
 
-    chdir: "/usr/src/linux-{{ kernel_git_version }}"
+    chdir: /root/linux
     executable: /bin/bash
   notify: "reboot required"
