--- a/playbooks/roles/setup/tasks/auto-update-debian.yaml
+++ b/playbooks/roles/setup/tasks/auto-update-debian.yaml
@@ -1,11 +1,11 @@
 ---
-- name: Configure update package list directory
+- name: Configure apt-daily timer directory
   ansible.builtin.file:
     state: directory
     path: "/etc/systemd/system/apt-daily.timer.d/"
     mode: "0755"
 
-- name: Configure update package list time
+- name: Configure apt-daily timer
   ansible.builtin.template:
     src: timer.j2
     dest: /etc/systemd/system/apt-daily.timer.d/override.conf
@@ -13,13 +13,13 @@
 
 # the apt-daily timer should call unattended upgrades already but configure it here nevertheless
 
-- name: Configure unattended upgrades directory
+- name: Configure apt-daily-upgrade directory
   ansible.builtin.file:
     state: directory
     path: "/etc/systemd/system/apt-daily-upgrade.timer.d/"
     mode: "0755"
 
-- name: Configure unattended upgrades time
+- name: Configure apt-daily-upgrade timer
   ansible.builtin.template:
     src: upgrade.j2
     dest: /etc/systemd/system/apt-daily-upgrade.timer.d/override.conf
