--- a/playbooks/roles/info_tor/tasks/main.yaml
+++ b/playbooks/roles/info_tor/tasks/main.yaml
@@ -4,7 +4,7 @@
   ansible.builtin.file:
     path: "{{ tmp_dir }}"
     state: directory
-    mode: '0755'
+    mode: "0755"
 
 - name: Set hashed-fingerprint
   ansible.builtin.import_tasks: hashed-fingerprint.yaml
