run CA once, iff

--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -74,6 +74,7 @@
         - prometheus-node-exporter
 
     - name: CA
+      run_once: true
       ansible.builtin.import_tasks: ca.yaml
       tags:
         - ca
