--- a/playbooks/roles/setup_tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-debian.yaml
@@ -7,11 +7,15 @@
 - name: Configure repository "torproject"
   ansible.builtin.apt_repository:
     filename: "torproject"
-    repo: "deb https://deb.torproject.org/torproject.org {{ item }} main"
+    repo: "deb https://deb.torproject.org/torproject.org {{ ansible_facts.distribution_release }} main"
     state: present
-  with_items:
-    - "{{ ansible_facts.distribution_release }}"
-    - "{{ tor_debian_target }}"
+
+- name: Configure repository "torproject"
+  when: tor_debian_target
+  ansible.builtin.apt_repository:
+    filename: "torproject"
+    repo: "deb https://deb.torproject.org/torproject.org {{ tor_debian_target }} main"
+    state: present
 
 - name: Install or update Debian key ring
   when: not ansible_check_mode
