--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,9 @@
 [defaults]
 interpreter_python = /usr/bin/python3
 
-# 2 per vCPU
-forks = 32
+forks = 64
+order = shuffled
 pipelining = True
-# no half-baked system state
 strategy = free
 
 gathering = implicit
