--- a/playbooks/roles/setup_tor/tasks/tools-git.yaml
+++ b/playbooks/roles/setup_tor/tasks/tools-git.yaml
@@ -15,7 +15,7 @@
     filename: "backports"
     repo: "deb http://deb.debian.org/debian {{ ansible_facts.distribution_release }}-backports main"
 
-- name: Install or update Go for Tor build
+- name: Install or update Go for Tor
   when: not ansible_check_mode
   ansible.builtin.apt:
     default_release: "{{ ansible_facts.distribution_release }}-backports"
