--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -52,6 +52,7 @@
           ansible.builtin.import_tasks: tor-git.yaml
           tags:
             - tor
+            - tor-src
 
         - name: Lyrebird
           ansible.builtin.import_tasks: lyrebird.yaml
