--- a/playbooks/roles/info_snowflake/tasks/version.yaml
+++ b/playbooks/roles/info_snowflake/tasks/version.yaml
@@ -2,7 +2,7 @@
 - name: Snowflake version
   changed_when: false
   ansible.builtin.shell: |
-    /usr/bin/proxy --version 2>&1 |
+    /usr/bin/snowflake-proxy --version 2>&1 |
     cut -f 2- -d ' '
   register: _proxy_version
   failed_when: (_proxy_version.stdout_lines | length != 1) or (_proxy_version.stderr_lines | length > 0)
