fix handlers, they have a global namespace

--- a/playbooks/roles/setup/handlers/main.yaml
+++ b/playbooks/roles/setup/handlers/main.yaml
@@ -8,7 +8,7 @@
     post_reboot_delay: 20
 
 - name: Restart Nginx
-  listen: "restart nginx"
+  listen: "restart Nginx"
   ansible.builtin.service:
     name: nginx
     state: restarted
