--- a/playbooks/roles/setup_tor/handlers/main.yaml
+++ b/playbooks/roles/setup_tor/handlers/main.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Restart Tor service
-  listen: "restart service"
+  listen: "restart Tor"
   ansible.builtin.service:
     name: tor
     state: restarted
